OpenAPI support for STI base models
